--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 deploy:
   provider: elasticbeanstalk
   access_key_id:
-    secure: "AKIARGE6CGLNQYOPFBNF"
+    secure: ""
   secret_access_key:
-    secure: "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"
+    secure: ""
   region: "us-east-2"
   app: "Group 43 Webpage"
   env: "Group43webpage-env"
