--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: ruby
-rvm:
- - 2.2
- - jruby
+language: python
+install:
+    - pip install coverage
+script:
+    - coverage run -m unittest discover
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
