--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 install:
     - pip install coverage
 script:
-    - coverage run -m unittest discover
+    - coverage run -m unittest sample_code_test.py
 after_success:
     - bash <(curl -s https://codecov.io/bash)
