--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ after_success:
     - bash <(curl -s https://codecov.io/bash)
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: $AMZN_ACCESS_KEY_ID
-  secret_access_key:
-    secure: $AMZN_SECRET_ACCESS_KEY
+  access_key_id: $AMZN_ACCESS_KEY_ID
+  secret_access_key: $AMZN_SECRET_ACCESS_KEY
   region: "us-east-2"
   app: "cps847-step4"
   env: "Cps847step4-env"
