--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "cps847-travis-node",
   "version": "1.0.0",
-  "description": "index site",
-  "main": "index.html",
+  "private": true,
+  "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
